--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.8.0",
+    "express": "^4.16.2",
     "ioredis": "^3.1.1",
     "istanbul": "^0.4.5",
     "koa": "^2.2.0",
     "koa-session": "^5.0.0",
     "mocha": "^3.1.0",
+    "on-headers": "^1.0.1",
     "superagent": "^3.5.2",
     "supertest": "^3.0.0"
   },
