--- a/package.json
+++ b/package.json
@@ -9,31 +9,36 @@
   ],
   "scripts": {
     "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
-    "test": "node ./node_modules/.bin/eslint ./*.js && node ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha ./test/*.js --"
+    "commitmsg": "validate-commit-msg",
+    "precommit": "npm run lint",
+    "format": "node node_modules/.bin/prettier --write *.js",
+    "jest": "node node_modules/.bin/jest --coverage *.test.js",
+    "lint": "node ./node_modules/.bin/eslint *.js",
+    "test": "npm run lint && npm run jest"
   },
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/vicanso/async-local-storage.git"
   },
+  "main": "als.js",
   "engines": {
     "node": ">=8.0.0"
   },
   "devDependencies": {
-    "eslint": "^3.12.2",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.8.0",
-    "express": "^4.16.2",
-    "ioredis": "^3.1.1",
-    "istanbul": "^0.4.5",
-    "koa": "^2.2.0",
-    "koa-session": "^5.0.0",
-    "mocha": "^3.1.0",
-    "on-headers": "^1.0.1",
-    "superagent": "^3.5.2",
-    "supertest": "^3.0.0"
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "husky": "^0.14.3",
+    "ioredis": "^3.2.2",
+    "jest": "^22.4.2",
+    "koa": "^2.5.1",
+    "koa-session": "^5.8.1",
+    "prettier": "^1.10.2",
+    "superagent": "^3.8.3",
+    "supertest": "^3.1.0",
+    "validate-commit-msg": "^2.14.0"
   },
   "dependencies": {
     "nano-seconds": "^1.2.2"
