--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "type": "git",
     "url": "https://github.com/vicanso/async-local-storage.git"
   },
-  "main": "als.js",
+  "main": "./als.js",
   "engines": {
     "node": ">=8.0.0"
   },
